--- a/my-app/src/assets/style.scss
+++ b/my-app/src/assets/style.scss
@@ -254,6 +254,8 @@ body {
                 &__listOrder {
                     padding: 10px 20px;
                     border-bottom: 2px solid #f5f5f5;
+                    overflow-y: auto;
+                    max-height: 300px;
                 }
                 &__mid {
                     padding: 15px 20px;
