--- a/my-app/src/assets/itemProductOrder.scss
+++ b/my-app/src/assets/itemProductOrder.scss
@@ -3,6 +3,7 @@
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid #f5f5f5;
+    cursor: pointer;
     &:last-child {
         border-bottom: none;
     }
